# RAMP

./: .gitignore  CITATION.cff  LICENSE  README.md
docs/: mcp_integration.md  ramp_protocol_spec_v2.md
examples/: flight_agent.py
gateway/: openapi.yaml  pyproject.toml
gateway/app/: __init__.py  main.py  policies.py  store.py
gateway/tests/: test_gateway.py
sdk/: pyproject.toml
sdk/ramp_sdk/: __init__.py  agent.py  models.py  signing.py
sdk/tests/: test_signing.py
skills/ramp-governance/: SKILL.md
skills/ramp-governance/references/: policy_rules.md
skills/ramp-governance/scripts/: ramp_client.py
