[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ramp-gateway"
version = "0.2.0"
description = "RAMP Gateway — FastAPI reference implementation"
license = "Apache-2.0"
authors = [{ name = "Fahad Deshmukh", email = "fahad.deshmukh@htw-berlin.de" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
