[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ramp-sdk"
version = "0.2.0"
description = "Python SDK for the Remote Agent Monitoring Protocol (RAMP)"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Fahad Deshmukh", email = "fahad.deshmukh@htw-berlin.de" }]
keywords = ["ramp", "agent", "monitoring", "protocol", "hitl", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[tool.hatch.build.targets.wheel]
packages = ["ramp_sdk"]
